--- a/brocadero_web_page.html
+++ b/brocadero_web_page.html
@@ -10,5 +10,6 @@
     <h1>This is a header</h1>
     <h2>this is a medium header</h2>
     <p>this is a paragraph</p><hr>
+    <h3>this is a heading h3</h3><hr>
 </body>
 </html>
